--- a/PartyInvite/Views/Home/Index.cshtml
+++ b/PartyInvite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="text-center"> 
-        <h2>We're going to have an exciting party!</h2>
+        <h2> @ViewBag.Greeting We're going to have an exciting party!</h2>
         <h3>And you are invited</h3>
         <div class="btn btn-success">
             @Html.ActionLink("RSVP Now", "RsvpForm")
